addition classes created

--- a/src/main/resources/templates/greeting.mustache
+++ b/src/main/resources/templates/greeting.mustache
@@ -5,6 +5,6 @@
     <title>Вход</title>
 </head>
 <body>
-<a href="/main">Основная страница</a>
+<a href="/main" type=""><button type="submit">Основная страница</button></a>
 </body>
 </html>
