--- a/src/main/resources/templates/main.mustache
+++ b/src/main/resources/templates/main.mustache
@@ -4,29 +4,26 @@
     <title>пох</title>
 </head>
 <body>
-    <div>
-        <form action="/logout" method="post">
+    <div style="margin-right: 10px">
+        <form action="/logout" method="post" >
             <input type="submit" value="Выйти">
-            <input type="hidden" name="_csrf" value="{{_csrf.token}}">
         </form>
     </div>
     <div>
         <form method="post">
             <input type="text" name="username" placeholder="Введите логин">
-            <input type="text" name="email" placeholder="Введите ЭП">
+            <input type="text" name="email" placeholder="Введите электронную почту">
             <button type="submit">Добавить</button>
-            <input type="hidden" name="_csrf" value="{{_csrf.token}}">
         </form>
     </div>
 
     <form method="post" action="deleteAll">
         <button type="submit">Очистить</button>
-        <input type="hidden" name="_csrf" value="{{_csrf.token}}">
     </form>
-    <form method="post" action="findById">
+
+    <form method="GET" action="findById">
         <input type="number" name="id" placeholder="Введите ID">
         <button type="submit">Найти по ID</button>
-        <input type="hidden" name="_csrf" value="{{_csrf.token}}">
     </form>
     <div>Список пользователей</div>
     {{#users}}
@@ -38,7 +35,6 @@
     </div>
     {{/users}}
 
-    </form>
 
 </body>
 </html>
